<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_mypage">MyPage</string>
    <string name="title_setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>