<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/review_icon"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/map_icon"
        android:title="@string/title_dashboard" />


    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/mypage_icon"
        android:title="@string/title_mypage" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting_icon"
        android:title="@string/title_setting" />

</menu>