<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_restaurant_InfoFragment4"
            app:destination="@id/restaurant_InfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.myapplication.ui.setting.SettingFragment"
        android:label="SettingFragment"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.myapplication.ui.mypage.MypageFragment"
        android:label="MypageFragment"
        tools:layout="@layout/fragment_mypage" >
    </fragment>
    <fragment
        android:id="@+id/restaurant_InfoFragment"
        android:name="com.example.myapplication.ui.restaurant_info.Restaurant_InfoFragment"
        android:label="restaurant__info_fragment"
        tools:layout="@layout/restaurant__info_fragment" >
    </fragment>

</navigation>